--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="index.css" />
     <script type="text/javascript" src="https://dl.frontapp.com/libs/frontjs.min.js"></script>
+    <script type="text/javascript" src="//dl.frontapp.com/libs/plugin-sdk-1.0.1.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="credentials.js"></script>
   </head>
