--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="plugin-div">
-      <span id="name" class="font name"></span>
+      <span id="name" class="font name">Lindsay</span>
       <span id="handle" class="font handle">-</span>
     </div>
   </body>
