--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     <li><button onclick="openUrl()">Open External URL</button></li>
     <li><button onclick="openUrlInPopup()">Open Internal URL in Popup</button></li>
 
-
-    <li><button onClick="peerReviewDraft()">Peer Review Draft</button></li>
+    <li><button id="assign">Assign</button></li>
     </ul>
 
   </body>
