--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
   </head>
   
   <body>
-   <h3 id="frontTeammate">test12</h3>
+   <h3 id="frontTeammate">test13</h3>
    <h3 id="messageRecipient"></h3>
 
 
     <ul>
-
-    <li><button onClick="insertDraftReply()">Insert Draft Reply</button></li>
-    <li><button onclick="openUrl()">Open External URL</button></li>
-    <li><button onclick="openUrlInPopup()">Open Internal URL in Popup</button></li>
+        <li>One</li>
+        <li>Two</li>
+    <!--<li><button onclick="openUrl()">Open External URL</button></li>-->
 
     </ul>
 
