--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   </head>
   
   <body>
-   <h3 id="frontTeammate">test17</h3>
+   <button class="navButton" onClick="window.location.reload();">Refresh Page</button>
+   <h3>id="test round">test18</h3>
+   <h3 id="frontTeammate"></h3>
    <h3 id="messageRecipient"></h3>
 
 
