--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   
   <body>
-   <button class="navButton" onClick="window.location.reload();">Refresh Page</button>
-   <h3>id="test round">test18</h3>
+   <button class="navButton font rowItem" onClick="window.location.reload();">Refresh Page</button>
+   <h3 id="test round">test19</h3>
    <h3 id="frontTeammate"></h3>
    <h3 id="messageRecipient"></h3>
 
