--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 					<button onClick="window.location.reload();">Refresh</button>
 				</div>
 				<div id="testRound" class="font navButton">
-					<p>test20</p>
+					<p>test21</p>
 				</div>
 		</div>
 
 		<div id="infoSection" class="width100percent">
 				<div class="column">
-					<object type="text/html" data="http://validator.w3.org/" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
+					<object type="text/html" data="https://validator.w3.org/" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
 					</object>
 				</div>
 		</div>
