--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<div id="infoSection" class="width100percent">
 				<div class="column">
-					<object type="text/html" data="https://validator.w3.org/" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
+					<object type="text/html" data="https://validator.w3.org/embed" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
 					</object>
 				</div>
 		</div>
