--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 		<div id="infoSection" class="width100percent">
 				<div class="column">
-					<object type="text/html" data="https://validator.w3.org/embed" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
-					</object>
+					<!---<object type="text/html" data="https://validator.w3.org/embed" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
+					</object>--->
 				</div>
 		</div>
 
