--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="index.css" />
 		<script type="text/javascript" src="//dl.frontapp.com/libs/plugin-sdk-1.0.1.min.js"></script>
 		<script type="text/javascript" src="credentials.js"></script>
-		<script type="text/javascript" src="app.js"></script>
+		<script type="text/javascript" src="index.js"></script>
 	</head>
 	
 	<body>
