--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
 	<head>
 		<title>Front Credential Plugin</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="public/index.css" />
+		<link rel="stylesheet" type="text/css" href="/app/index.css" />
 		<script type="text/javascript" src="//dl.frontapp.com/libs/plugin-sdk-1.0.1.min.js"></script>
-		<script type="text/javascript" src="../Users/lindsayrawitscher/Documents/GitHub/ManageApp-Front/credentials.js"></script>
-		<script type="text/javascript" src="public/index.js"></script>
+		<script type="text/javascript" src="/app/credentials.js"></script>
+		<script type="text/javascript" src="/app/index.js"></script>
 	</head>
 	
 	<body>
 	 <div class="plugin-div">
-		<span id="frontTeammate" class="font name"></span>
-		<span id="messageRecipient" class="font handle">-</span>
+		<span id="frontTeammate" class="font name">NoUserFound</span>
+		<span id="messageRecipient" class="font handle">NoNurseFound</span>
 
 		<div class="navButtonRow width100percent">   
 				<div id="RefreshButton" class="font navButton">
 					<button onClick="window.location.reload();">Refresh</button>
 				</div>
 				<div id="testRound" class="font navButton">
-					<p>test22</p>
+					<p>test25</p>
 				</div>
 		</div>
 
 		<div id="infoSection" class="width100percent">
 				<div class="column">
-					<object type="text/html" data="https://app.trustedhealth.com/credentials?sfdc_user_id=0053m00000AvSIBAA3&user_uuid=3f58363b-a2c1-4262-bccf-5d83e13cc60a" width="800px" height="600px" style="width:100%;overflow:auto;border:5px ridge blue">
+					<object type="text/html" data="https://app.trustedhealth.com/credentials?sfdc_user_id=0053m00000AvSIBAA3&user_uuid=3f58363b-a2c1-4262-bccf-5d83e13cc60a" width="800px" height="600px" style="width:100%;overflow:auto;border:1px black">
 					</object>
 				</div>
 		</div>
